[project]
name = "wink-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Иларион Ерченко", email = "turolretar@gmail.com" }]
dependencies = ["fastapi>=0.115.12"]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[dependency-groups]
dev = ["ruff>=0.11.4"]
