[project]
name = "wink-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Иларион Ерченко", email = "turolretar@gmail.com" }]
dependencies = [
    "fastapi>=0.115.12",
    "pydantic-settings>=2.8.1",
    "fastapi-cli>=0.0.7",
    "gunicorn>=23.0.0",
    "asyncpg>=0.30.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[dependency-groups]
dev = [
    "ruff>=0.11.4",
    "httpx>=0.28.1",
    "fastapi-profiler>=1.4.1",
    "asyncpg-stubs>=0.30.1",
]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "fastapi dev src/wink_test/main.py"
test.cmd = "python -m unittest discover tests -p '*.py'"
test.env = { PYTHONPATH = "${PYTHONPATH}:${PDM_PROJECT_ROOT}/src" }
